wui/static/css/main.css
/* ... */
#exercise-card .collection-item .row {
    margin-bottom: 0;
}

#exercise-card .collection-item.inactive {
    color: #aaa;
}

#exercise-card .collection-item.inactive:hover {
    background-color: unset;
}

#exercise-card .groups {
    font-size: 0.8em;
    margin-left: 1rem;
}

#exercise-card .time {
    display: flex;
    align-items: center;
    font-size: 0.8em;
    margin: 0 1rem;
    flex-shrink: 1;
}

#exercise-card .time ez-icon {
    display: inline-flex;
    margin-right: 1rem;
}


#exercise-card .grade {
    display: flex;
    align-items: center;
    font-size: 0.8em;
    margin-left: 1rem;
}

#exercise-card .eval-logo-auto,
#exercise-card .eval-logo-teacher,
#exercise-card .eval-logo-missing {
    margin-left: 10px;
}

#exercise-card .eval-logo-teacher {
    font-size: 18px;
    color: #aaa;
}

#exercise-card .divided-collection .collection-item {
    box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.1),
    0 2px 1px -2px rgba(0, 0, 0, 0.09),
    0 1px 3px 0 rgba(0, 0, 0, 0.1);
}

#exercise-card .submission-title {
    display: inline-block;
    margin: 2.5rem 0 1.5rem 0;
}

#exercise-card span.last-submission-label {
    margin-left: 1rem;
}

#exercise-card .all-submissions-wrap {
    max-height: 35vh;
    overflow: auto;
}

#exercise-card .eval-logo-auto.sm {
    width: 22px;
}

#exercise-card .eval-logo-missing.sm {
    width: 22px;
}


/** Courses page **/

#courses-list .teacher-course-wrapper {
    position: relative;
}

#courses-list a.course-add-students {
    position: absolute;
    top: 11px;
    right: 5px;
    color: #4cab54;
    text-transform: none;
}

#courses-list span.course-student-count {
    font-size: 1.9rem;
    color: #333;
    margin-left: 1rem;
    display: none;
}

@media only screen and (min-width: 400px) {
    #courses-list span.course-student-count {
        display: initial;
    }

    #courses-list a.course-add-students {
        right: 20px;
    }
}

@media only screen and (min-width: 600px) {
    #courses-list a.course-add-students {
        top: 18px;
    }
}

#courses-list a.course-add-students:hover {
    background-color: rgba(0, 0, 0, 0.1);
}

#courses-list a.course-add-students > i.material-icons {
    font-size: 2.5rem;
}


/** Course exercises page **/

.update-course-ex-title-modal ez-attr {
    padding-bottom: 2rem;
}

.update-course-ex-title-modal ez-datetime-field {
    display: block;
}

.update-course-ex-title-modal .update-course-exercise-deadline {
    padding-top: 2.5rem;
}

.update-course-ex-title-modal .update-course-exercise-closing {
    padding-top: 1rem;
}

ez-deadline-close,
ez-deadline-close ez-icon {
    color: var(--ez-yellow-text);
}

ez-exercise-badge ez-icon {
    color: var(--ez-green);
}


#exercises-list .exercise-item {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    flex-grow: 1;
}

#exercises-list .exercise-item > * {
    margin: 0 1rem;
}

#exercises-list .deadline {
    font-size: 0.8em;
}

#exercises-list .grade {
    display: flex;
    align-items: center;
    font-size: 0.8em;
}

#exercises-list .eval-logo-auto,
#exercises-list .eval-logo-missing,
#exercises-list .eval-logo-teacher {
    margin-left: 10px;
}

#exercises-list .eval-logo-teacher {
    font-size: 18px;
    color: #aaa;
}

#exercises-list .collection-item .row {
    margin-bottom: 0;
}

#UPDATE_COURSE ez-attr {
    padding-bottom: 2rem;
}


/** Exercise page **/

#global-exercise > ez-block-container {
    gap: 2rem 5rem;
}

@container subpage-tabs (width < 650px) {
    #global-exercise ez-tabs-trailer ez-btn-content ez-btn-text {
        display: none;
    }
}

#global-exercise .attr-list ul {
    margin-top: 0;
}

#global-exercise ez-tabs.toplevel > ez-tabs-content {
    display: flex;
    flex-direction: column;
    margin-top: 3rem;
}

#global-exercise ez-exercise-testing-tab ez-warning {
    margin-bottom: 2rem;
}

#global-exercise ez-exercise-edit-tab .CodeMirror-scroll {
    max-height: none;
}

#DIR_PERMISSIONS .modal .modal-content {
    padding-bottom: 2rem;
}

#DIR_PERMISSIONS .modal.fixed-footer .modal-footer {
    border-top: none;
    padding: 0;
}

ez-exercise-permissions ez-permission {
    display: flex;
    align-items: center;
    justify-content: space-between;
    min-height: 5.6rem;
}

ez-exercise-permissions ez-permission.inherited {
    border-left: 1px solid #ccc;
    padding-left: 1rem;
}

ez-exercise-permissions ez-inheriting-dir {
    display: block;
    margin-top: 2rem;
    margin-bottom: .5rem;
}

ez-exercise-permissions ez-inheriting-dir a {
    font-weight: 500;
}

ez-exercise-permissions .select-wrap {
    display: inline-block;
    width: 12rem;
    margin: 0;
}

ez-exercise-permissions ez-permission-subject {
    display: flex;
    flex-direction: column;
}

ez-exercise-permissions ez-permission-name {
    display: flex;
}

ez-exercise-permissions ez-permission-name ez-icon {
    margin-right: .7rem;
}

ez-exercise-permissions ez-permission-email {
    font-size: 1.2rem;
    color: var(--ezc-attr-immutable-col);
}


/* "Remove access" option, no way to do this since materialize moves options to body for unconstrained selects */
/*ez-exercise-permissions ul li:last-child {*/
/*    border-top: 1px solid #ccc;*/
/*}*/


/** Anonymous autoeval embed **/

#anonauto button:not([disabled]) {
    padding-bottom: .4rem;
}

#anonauto .CodeMirror-scroll {
    min-height: 8rem;
    max-height: none;
}


/* Code editor */

ez-code-edit.readonly .CodeMirror-cursors {
    visibility: hidden;
}

/* Text cursor on empty editor part where there are no lines */
.CodeMirror-scroll {
    cursor: text;
}

.CodeMirror-gutter {
    cursor: auto;
}

ez-code-editor-field-help {
    display: flex;
    margin-top: 0.6rem;
    margin-bottom: 1rem;
    font-size: 1.2rem;
    /* same as text fields */
    color: rgba(0,0,0,0.54);
}


/* Merge */

.CodeMirror-merge-r-chunk-start {
    border-top: 1px solid #ebffeb;
}

.CodeMirror-merge-r-chunk {
    background: #ebffeb;
}
/* ... */

